--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,231 @@
 ﻿/*
-  # Author Name: Type your own Name;
-  # Author Section: Type your own Section;
-  # Author Roll No: Type your TBC ID;
+  # Author Name: Seema Shrestha;
+  # Author Section: A;
+  # Author Roll No: 2838;
 */
+
+*{
+  margin:0;
+  padding:0;
+}
+.clr{
+  clear:both;
+}
+body{
+  font-family:Tahoma;
+}
+.container{
+  width:1140px;
+  margin:auto
+}
+.container img{
+  width:100%;
+}
+.navbar{
+  background-color:rgba(243, 234, 234, 0.308);
+  height:50px;
+}
+.navbar ul{
+  list-style:none;
+  padding-top:10px;
+}
+.navbar ul li{
+  display:inline-block;
+  padding-top:5px;
+}
+.navbar ul li a{
+  text-decoration: none;
+  color:black;
+  padding-right:100px;
+  padding-left:150px;
+}
+h1{
+  margin:20px 0px;
+  font-size:30px;
+}
+p{
+  margin-bottom:10px;
+}
+.col25{
+  width:25%;
+  float:left;
+  box-sizing:border-box;
+  padding-left:15px;
+  padding-bottom:20px;
+  margin-bottom:30px;
+}
+.col25 h6{
+  font-size:20px;
+  margin:20px 0px;
+
+}
+#one{
+  background-color:rgb(216, 211, 211);
+}
+#two{
+  background-color:rgb(150, 146, 146);
+}
+#three{
+  background-color:rgb(66, 66, 66);
+  color:white;
+}
+#four{
+  background-color:rgb(3, 3, 3);
+  color:white;
+}
+.col30{
+  width:32%;
+  float:left;
+  box-sizing:border-box;
+  text-align:center;
+  margin-right:10px;
+  margin-top:30px;
+}
+#black h3{
+  color:white;
+  background-color:black;
+  padding:30px 0px;
+}
+#white h3{
+  color:white;
+  background-color:grey;
+  padding:30px 0px;
+}
+.col30 ul li{
+  list-style: none;
+  padding:10px 0px;
+  border-bottom:1px solid rgb(207, 205, 205);
+  border:1px solid rgb(201, 200, 200);
+}
+.button input{
+  background-color:rgb(5, 182, 5);
+  padding:10px;
+  border:0;
+  color:white;
+}
+.button{
+  background-color: rgb(245, 240, 240);
+}
+.coll30{
+  width:32%;
+  float:left;
+  box-sizing:border-box;
+  margin-right:10px;
+  border:1px solid rgb(207, 205, 205);
+}
+.coll30 img{
+  width:100%;
+}
+.coll30 h4,h2,p{
+  padding-left:10px;
+}
+.coll30 h2{
+  padding:20px 10px;
+}
+.coll30 h4{
+  padding:15px 10px;
+}
+.coll30 input{
+  background-color: rgb(201, 200, 200);
+  border:0;
+  width:320px;
+  margin-left:20px;
+  padding:10px 0px;
+  margin-bottom:10px;
+}
+.dataform label{
+  display:block;
+}
+.dataform input{
+  width:100%;
+  height:25px;
+  margin-bottom:10px;
+}
+#send{
+  border:0;
+  height:40px;
+  background-color:black;
+  color:white;
+  margin-bottom:40px;
+}
+.title{
+  text-align:center;
+  font-weight:normal;
+}
+hr{
+  width:190px;
+  background-color:rgb(66, 65, 65);
+  height:10px;
+  border:0;
+  margin-left:475px;
+  margin-bottom:50px;
+}
+.plan{
+  text-align:center;
+  font-weight:normal;
+} 
+  padding:30px 0px;
+}
+#white h3{
+  color:white;
+  background-color:grey;
+  padding:30px 0px;
+}
+.col30 ul li{
+  list-style: none;
+  padding:10px 0px;
+  border-bottom:1px solid rgb(207, 205, 205);
+  border:1px solid rgb(201, 200, 200);
+}
+.button input{
+  background-color:rgb(5, 182, 5);
+  padding:10px;
+  border:0;
+  color:white;
+}
+.button{
+  background-color: rgb(241, 222, 222);
+}
+.coll25{
+  width:30%;
+  float:left;
+  box-sizing:border-box;
+  margin-right:10px;
+  margin-top:100px;
+  border:1px solid rgb(207, 205, 205);
+}
+.coll25 img{
+  width:100%;
+}
+.coll25 h4,h2,p{
+  padding-left:10px;
+}
+.coll25 h2{
+  padding:20px 10px;
+}
+.coll25 h4{
+  padding:15px 10px;
+}
+.coll25 input{
+  background-color: rgb(201, 200, 200);
+  border:0;
+  width:320px;
+  margin-left:10px;
+  padding:10px 0px;
+  margin-bottom:10px;
+}
+.dataform label{
+  display:block;
+}
+.dataform input{
+  width:100%;
+  height:25px;
+  margin-bottom:10px;
+}
+#send{
+  border:0;
+  height:40px;
+  background-color:black;
+  color:white;
+  margin-bottom:10px;
+}
