--- a/css/styles.css
+++ b/css/styles.css
@@ -8,36 +8,51 @@
   margin:0;
   padding:0;
 }
-.clr{
-  clear:both;
-}
 body{
-  font-family:Tahoma;
+  font-family:'Times New Roman', Times, serif;
 }
 .container{
   width:1140px;
-  margin:auto
+  margin:auto;
 }
 .container img{
   width:100%;
 }
-.navbar{
-  background-color:rgba(243, 234, 234, 0.308);
+.top-left{
+  position:absolute;
+  top:8px;
+  left:16px;
+}
+.clear{
+  clear:both;
+}
+
+.topmenu{
+  background-color:rgba(228, 216, 216, 0.308);
   height:50px;
 }
-.navbar ul{
+.topmenu ul{
   list-style:none;
   padding-top:10px;
 }
-.navbar ul li{
+.topmenu ul li{
   display:inline-block;
   padding-top:5px;
 }
-.navbar ul li a{
+.topmenu ul li a{
   text-decoration: none;
   color:black;
-  padding-right:100px;
   padding-left:150px;
+  padding-right:100px;
+  
+}
+hr{
+  width:190px;
+  background-color:rgb(66, 65, 65);
+  height:10px;
+  border:0;
+  margin-left:475px;
+  margin-bottom:50px;
 }
 h1{
   margin:20px 0px;
@@ -49,27 +64,27 @@ p{
 .col25{
   width:25%;
   float:left;
-  box-sizing:border-box;
   padding-left:15px;
   padding-bottom:20px;
   margin-bottom:30px;
+  box-sizing:border-box;
 }
-.col25 h6{
+.col25 h5{
   font-size:20px;
   margin:20px 0px;
 
 }
-#one{
+#first{
   background-color:rgb(216, 211, 211);
 }
-#two{
+#second{
   background-color:rgb(150, 146, 146);
 }
-#three{
-  background-color:rgb(66, 66, 66);
+#third{
+  background-color:rgb(92, 91, 91);
   color:white;
 }
-#four{
+#fourth{
   background-color:rgb(3, 3, 3);
   color:white;
 }
@@ -99,33 +114,35 @@ p{
 }
 .button input{
   background-color:rgb(5, 182, 5);
-  padding:10px;
   border:0;
   color:white;
+  padding:10px;
+  
 }
 .button{
   background-color: rgb(245, 240, 240);
 }
-.coll30{
+.colm30{
   width:32%;
   float:left;
-  box-sizing:border-box;
   margin-right:10px;
   border:1px solid rgb(207, 205, 205);
+  box-sizing:border-box;
+  margin-bottom: 50px;
 }
-.coll30 img{
+.colm30 img{
   width:100%;
 }
-.coll30 h4,h2,p{
+.colm30 h4,h2,p{
   padding-left:10px;
 }
-.coll30 h2{
+.colm30 h2{
   padding:20px 10px;
 }
-.coll30 h4{
+.colm30 h4{
   padding:15px 10px;
 }
-.coll30 input{
+.col30 input{
   background-color: rgb(201, 200, 200);
   border:0;
   width:320px;
@@ -152,19 +169,10 @@ p{
   text-align:center;
   font-weight:normal;
 }
-hr{
-  width:190px;
-  background-color:rgb(66, 65, 65);
-  height:10px;
-  border:0;
-  margin-left:475px;
-  margin-bottom:50px;
-}
+
 .plan{
   text-align:center;
   font-weight:normal;
-} 
-  padding:30px 0px;
 }
 #white h3{
   color:white;
@@ -184,40 +192,13 @@ hr{
   color:white;
 }
 .button{
-  background-color: rgb(241, 222, 222);
+  background-color: rgb(226, 224, 224);
 }
-.coll25{
-  width:30%;
-  float:left;
-  box-sizing:border-box;
-  margin-right:10px;
-  margin-top:100px;
-  border:1px solid rgb(207, 205, 205);
-}
-.coll25 img{
-  width:100%;
-}
-.coll25 h4,h2,p{
-  padding-left:10px;
-}
-.coll25 h2{
-  padding:20px 10px;
-}
-.coll25 h4{
-  padding:15px 10px;
-}
-.coll25 input{
-  background-color: rgb(201, 200, 200);
-  border:0;
-  width:320px;
-  margin-left:10px;
-  padding:10px 0px;
-  margin-bottom:10px;
-}
-.dataform label{
+
+.form label{
   display:block;
 }
-.dataform input{
+.form input{
   width:100%;
   height:25px;
   margin-bottom:10px;
